tests/errors/file-not-found.spcasmtest
org 0
include "this_definitely_does_not_exist"